# converser

./: README.md  pyproject.toml
data/: dataset.csv  sample_conversation.json  states.tsv
data/conversations/: conversation-20250326111925.json  conversation-20250326123111.json
src/: flow.py
src/converser/: agent.py  audio.py  graph.py  main.py  parser.py  util.py
tests/: test_parser.py
