[project]
name = "converser"
version = "0.1.0"
description = ""
authors = [
    {name = "Roberto Ruiz"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai-agents (>=0.0.6,<0.0.7)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
