[project]
name = "converser"
version = "0.1.0"
description = ""
authors = [
    {name = "Roberto Ruiz"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "openai-agents (>=0.0.6,<0.0.7)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-graph (>=0.0.43,<0.0.44)",
    "numpy (>=2.2.4,<3.0.0)",
    "sounddevice (>=0.5.1,<0.6.0)",
    "websockets (>=15.0.1,<16.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include="converser", from="src"}]

[tool.poetry.scripts]
conversation = "converser.main:main_cli"

[tool.poetry.group.dev.dependencies]
basedpyright = "^1.28.3"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"

